# patient-management-system

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/core/: settings.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/sql/: insert.sql  patient_db_create.sql
deployment/: Dockerfile  docker-compose.yml
deployment/init-scripts/: create-health-db.sql
deployment/k8s/: deployment.yaml  ingress.yml  service.yaml
deployment/terraform/: backend.tf  main.rf  outputs.tf  provider.tf  variables.tf
frontend/: package.json  tailwind.config.js
frontend/public/: env-config.js  index.html  manifest.jason
